Fix font size on iOS

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ body {
   font-family: 'Open Sans';
   font-size: 13px;
   line-height: 20px;
+  -webkit-text-size-adjust: 100%;
 }
 a {
   color: #000;
